feat: updates title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flappy cube</title>
+    <title>Bird cube</title>
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body class="min-h-screen bg-slate-600 overflow-hidden">
@@ -26,7 +26,7 @@
 
     <dialog id="modal-start">
       <div class="flex flex-col gap-8 rounded">
-        <h1 class="text-5xl font-bold">Bora jogar Flappy cube?</h1>
+        <h1 class="text-5xl font-bold">Bora jogar Bird cube?</h1>
 
         <p>Controles:</p>
 
